...
        android:layout_height="181dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:srcCompat="@drawable/addroom" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="334dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="Welcome Arbin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
